refactor: array as list to list of